--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -104,10 +104,10 @@
 		    <field name="cantidad" />
 		    <field name="precio" />
 		    <field name="importe" />
-		    		<field name="actualizar"/>
-		    		<field name="name"/>
+		    		<field name="actualizar" invisible="1" />
+		    		<field name="name" invisible="1" />
 		    		<field name="product_uom_qty" invisible="1" />
-		    		<field name="price_unit"/>
+		    		<field name="price_unit" invisible="1" />
 				<field name="no_editar" invisible="1" />
 				<field name="lotes_fabricar" invisible="1" />
 				<field name="lot_ids" invisible="1" />
