--- a/punt_eltete/views/purchase_order.xml
+++ b/punt_eltete/views/purchase_order.xml
@@ -74,6 +74,8 @@
 				<field name="date_planned" invisible="1" />
 				<field name="num_lotes" invisible="1" />
 				<field name="lot_ids" invisible="1" />
+				<field name="peso_neto" invisible="1" />
+				<field name="unidades" invisible="1" />
             </xpath>
 			
 
