--- a/punt_eltete/views/account_invoice.xml
+++ b/punt_eltete/views/account_invoice.xml
@@ -20,6 +20,7 @@
 			
 			<xpath expr="//field[@name='invoice_line_ids']/tree/field[@name='price_unit']" position="before">
 				<field name="peso_neto" />
+				<field name="carrier_id" />
             </xpath>
 			
 			
