--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -30,7 +30,9 @@
 		    	<field name="disponible"/>
 		    </group>	
 		    <group>
-		        <field name="fecha_salida"/>
+			<field name="date_done"/>  
+			<field name="scheduled_date"/>  
+			<field name="fecha_salida"/>
 		        <field name="almacen"/>
 		    </group>
 		</group>
