--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -270,7 +270,7 @@
 					<field name='peso_neto' />
 					<field name='fecha_entrada' />
 					<field name='picking_id' />
-					<field name='fecha_salida' />
+					<field name='fecha_salir' />
 					<field name="imprimir_etiqueta"/>
 					<field name='disponible' invisible="1"/>
 				</tree>
