--- a/punt_eltete/views/account_invoice.xml
+++ b/punt_eltete/views/account_invoice.xml
@@ -23,6 +23,8 @@
 			
 			<xpath expr="//field[@name='invoice_line_ids']/tree/field[@name='price_unit']" position="before">
 				<field name="peso_neto" />
+				<field name="numero_contenedor" />
+				<field name="precinto_contenedor" />
             </xpath>
 			
 			
