--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -104,6 +104,7 @@
 		    <field name="cantidad" />
 		    <field name="precio" />
 		    <field name="importe" />
+		    		<field name="tax" />
 		    		<field name="actualizar" invisible="1" />
 		    		<field name="name" invisible="1" />
 		    		<field name="product_qty" invisible="1" />
