--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -180,13 +180,15 @@
                 	<group>
 				<field name="name"/>
 				<field name="referencia_id"/>
-				<field name="descripcion"/>
 				<field name="unidades"/>
 				<field name="comentario"/>
 				<field name="peso_neto"  sum="Peso"/>
 				<field name="fecha_entrada"/>
 				<field name="inventariado"/>
 				<field name="almacenado"/>
+			</group>
+			<group>
+				<field name="descripcion"/>
 			</group>
                 </sheet>
             </form>
