--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -120,6 +120,8 @@
 			<field name="metido"/>
 			<field name="referencia_id"/>
 			<field name="descripcion"/>
+			<field name="comentario"/>
+			<field name="pallet_sage"/>
 			<field name="unidades"/>
 			<field name="peso_neto"  sum="Peso"/>
 			<field name="fecha_entrada"/>
