--- a/punt_eltete/reports/eltete_report.xml
+++ b/punt_eltete/reports/eltete_report.xml
@@ -49,7 +49,7 @@
         />
 	  
 	    
-	<report 
+		<report 
             id="rep_sale_order_etiquetas"
             string="Etiquetas Linea Pedido"
             model="sale.order.line" 
@@ -66,6 +66,15 @@
             report_type="qweb-pdf"
             file="punt_eltete.report_stock_picking_orden_carga" 
             name="punt_eltete.report_stock_picking_orden_carga" 
+        />
+		
+		<report 
+            id="rep_stock_production_lot_etiqueta"
+            string="Etiqueta"
+            model="stock.production.lot" 
+            report_type="qweb-pdf"
+            file="punt_eltete.report_stock_production_lot_etiqueta"
+            name="punt_eltete.report_stock_production_lot_etiqueta"
         />
         
 
