--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -121,7 +121,6 @@
 			<field name="referencia_id"/>
 			<field name="descripcion"/>
 			<field name="comentario"/>
-			<field name="pallet_sage"/>
 			<field name="unidades"/>
 			<field name="peso_neto"  sum="Peso"/>
 			<field name="fecha_entrada"/>
@@ -165,7 +164,6 @@
 				<field name="peso_neto"  sum="Peso"/>
 				<field name="fecha_entrada"/>
 				<field name="defectuoso"/>
-				<field name="inventariado"/>
 				<field name="almacenado"/>
 			</tree>
 		</field>
@@ -187,7 +185,6 @@
 				<field name="peso_neto"  sum="Peso"/>
 				<field name="fecha_entrada"/>
 				<field name="defectuoso"/>
-				<field name="inventariado"/>
 				<field name="almacenado"/>
 			</group>
 			<group>
@@ -723,11 +720,13 @@
 									<field name="name"/>
                                     <field name="referencia_id"/>
 									<field name="descripcion"/>
+									<field name="comentario"/>
 									<field name="unidades"/>
 									<field name="peso_neto"  sum="Peso"/>
 									<field name="fecha_entrada"/>
 									<field name="fecha_salir"/>
 									<field name="picking_id"/>
+									<field name="defectuoso"/>
 									<field name="inventariado"/>
 									<field name="almacenado"/>
                                 </tree>
