--- a/punt_eltete/views/purchase_order.xml
+++ b/punt_eltete/views/purchase_order.xml
@@ -20,9 +20,6 @@
 					<group>
 						<h3>Añadir líneas de pedido</h3>
 						<field name='partner_id' domain="[('customer', '=', True),('is_company', '=', True)]" options="{'no_create': True, 'no_create_edit':True}" />
-						<!--<field name='referencia_cliente_id' domain="[('partner_id', '=', partner_id),]" options="{'no_create': True, 'no_create_edit':True}" />
-						<field name='attribute_id' domain="[('referencia_cliente_id', '=', referencia_cliente_id),('activa', '=', True)]" options="{'no_create': True, 'no_create_edit':True}"/>
-						<field name='oferta_id' domain="[('attribute_id', '=', attribute_id),('activa', '=', True)]" options="{'no_create': True, 'no_create_edit':True}"/>-->
 						<field name='line_id' domain="[('order_partner_id', '=', partner_id),('qty_delivered', '=', 0),]" options="{'no_create': True, 'no_create_edit':True}" />
 						<field name='num_pallets' invisible = "1"/>
 					</group>
@@ -63,9 +60,8 @@
                 <field name="partner_id" invisible="1" />
 				<field name="product_id" invisible="1" />
 				<field name="name" invisible="1" />
-				<field name="cliente_id" />
-				<field name="attribute_id" domain="[('partner_id', '=', cliente_id),('activa', '=', True)]" />
-				<field name="sale_line_id" domain="[('order_partner_id', '=', partner_id),('qty_delivered', '=', 0),]" options="{'no_create': True, 'no_create_edit':True}"/>
+				<field name="cliente_id" invisible="1"/>
+				<field name="sale_line_id" domain="[('order_partner_id', '=', cliente_id)]" options="{'no_create': True, 'no_create_edit':True}"/>
 				<field name='descripcion_proveedor' />
 				<field name='comentario_proveedor' />
 				<field name="num_pallets" />
