--- a/punt_eltete/views/purchase_order.xml
+++ b/punt_eltete/views/purchase_order.xml
@@ -60,16 +60,18 @@
                 <field name="partner_id" invisible="1" />
 				<field name="product_id" invisible="1" />
 				<field name="name" invisible="1" />
+				<field name="date_planned" invisible="1" />
+				<field name="product_uom" invisible="1" />
+				<field name="taxes_id" invisible="1" />
 				<field name="cliente_id" invisible="1"/>
-				<field name="sale_line_id" domain="[('order_partner_id', '=', cliente_id)]" options="{'no_create': True, 'no_create_edit':True}"/>
-				<field name='descripcion_proveedor' />
-				<field name='comentario_proveedor' />
+				<field name="sale_line_id" domain="[('order_partner_id', '=', cliente_id),('product_id', '=', product_id)]" options="{'no_create': True, 'no_create_edit':True}"/>
+				<field name='descripcion' />
+				<field name="tipo_unidad" />
+				<field name="precio" />
 				<field name="num_pallets" />
-				<field name="precio_kilo" />
-				<field name="precio_und" />
+				<field name="kg_pedidos" />
 				<field name="importe_pedido" />
 				<field name="importe_llegada" />
-				<field name="date_planned" invisible="1" />
 				<field name="num_lotes" invisible="1" />
 				<field name="lot_ids" invisible="1" />
 				<field name="peso_neto" invisible="1" />
