--- a/punt_eltete/views/purchase_order.xml
+++ b/punt_eltete/views/purchase_order.xml
@@ -66,12 +66,13 @@
 				<field name="cliente_id" invisible="1"/>
 				<field name="sale_line_id" domain="[('order_partner_id', '=', cliente_id),('product_id', '=', product_id)]" options="{'no_create': True, 'no_create_edit':True}"/>
 				<field name='descripcion' />
+				<field name="und_pallet" />
 				<field name="tipo_unidad" />
 				<field name="precio" />
 				<field name="num_pallets" />
 				<field name="kg_pedidos" />
 				<field name="importe_pedido" />
-				<field name="importe_llegada" />
+				<field name="importe_llegado" />
 				<field name="num_lotes" invisible="1" />
 				<field name="lot_ids" invisible="1" />
 				<field name="peso_neto" invisible="1" />
