--- a/punt_eltete/views/purchase_order.xml
+++ b/punt_eltete/views/purchase_order.xml
@@ -65,7 +65,7 @@
 				<field name="taxes_id" invisible="1" />
 				<field name="cliente_id" invisible="1"/>
 				<field name="sale_line_id" domain="[('order_partner_id', '=', cliente_id),('product_id', '=', product_id)]" options="{'no_create': True, 'no_create_edit':True}"/>
-				<field name='descripcion' />
+				<field name='descripcion_bemeco' />
 				<field name="und_pallet" />
 				<field name="tipo_unidad" />
 				<field name="precio" />
