--- a/punt_eltete/views/purchase_order.xml
+++ b/punt_eltete/views/purchase_order.xml
@@ -101,8 +101,7 @@
 			
 			<field name="price_unit" position="after">
 				<field name="product_uom_qty" />
-				<field name="precio_kilo" />
-				<field name="precio_und" />
+				<field name="precio" />
 				<field name="peso_neto" />
 				<field name="unidades" />
 				<field name="num_lotes" />
