--- a/punt_eltete/views/purchase_order.xml
+++ b/punt_eltete/views/purchase_order.xml
@@ -64,7 +64,7 @@
 				<field name="product_uom" invisible="1" />
 				<field name="taxes_id" invisible="1" />
 				<field name="cliente_id" invisible="1"/>
-				<field name="sale_line_id" domain="[('order_partner_id', '=', cliente_id),('product_id', '=', product_id)]" options="{'no_create': True, 'no_create_edit':True}"/>
+				<field name="sale_line_id" domain="[('order_partner_id', '=', cliente_id),('incompleta', '=', True]" options="{'no_create': True, 'no_create_edit':True}"/>
 				<field name='descripcion_bemeco' />
 				<field name="und_pallet" />
 				<field name="tipo_unidad" />
