--- a/punt_eltete/views/purchase_order.xml
+++ b/punt_eltete/views/purchase_order.xml
@@ -20,7 +20,7 @@
 					<group>
 						<h3>Añadir líneas de pedido</h3>
 						<field name='partner_id' domain="[('customer', '=', True),('is_company', '=', True)]" options="{'no_create': True, 'no_create_edit':True}" />
-						<field name='line_id' domain="[('order_partner_id', '=', partner_id),('qty_delivered', '=', 0),]" options="{'no_create': True, 'no_create_edit':True}" />
+						<field name='line_id' domain="[('order_partner_id', '=', partner_id),('incompleta', '=', True)]" options="{'no_create': True, 'no_create_edit':True}" />
 						<field name='num_pallets' invisible = "1"/>
 					</group>
 				</group>
@@ -64,7 +64,7 @@
 				<field name="product_uom" invisible="1" />
 				<field name="taxes_id" invisible="1" />
 				<field name="cliente_id" invisible="1"/>
-				<field name="sale_line_id" domain="[('order_partner_id', '=', cliente_id),('incompleta', '=', True]" options="{'no_create': True, 'no_create_edit':True}"/>
+				<field name="sale_line_id" domain="[('order_partner_id', '=', cliente_id),('incompleta', '=', True)]" options="{'no_create': True, 'no_create_edit':True}"/>
 				<field name='descripcion_bemeco' />
 				<field name="und_pallet" />
 				<field name="tipo_unidad" />
