--- a/punt_eltete/views/stock_picking.xml
+++ b/punt_eltete/views/stock_picking.xml
@@ -21,6 +21,7 @@
         <field name="arch" type="xml">
         
             <xpath expr="//field[@name='origin']" position="after">
+                <field name="transporte"/>
                 <field name="numero_contenedor"/>
                 <field name="precinto_contenedor"/>
             </xpath>            
