--- a/punt_eltete/views/purchase_order.xml
+++ b/punt_eltete/views/purchase_order.xml
@@ -68,6 +68,7 @@
 				<field name='descripcion_bemeco' />
 				<field name="und_pallet" />
 				<field name="tipo_unidad" />
+				<field name="precio_ref" />
 				<field name="precio_num" />
 				<field name="num_pallets" />
 				<field name="kg_pedidos" />
