--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -326,4 +326,64 @@
     </record>
     
     
+    
+    
+    <!-- APARTADO DE PRODUCCION -->
+    
+    
+    
+    
+    <record model="ir.actions.act_window" id="action_sale_order_line_produccion_cantonera">
+        <field name="name">Cantoneras</field>
+        <field name="res_model">sale.order.line</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">kanban,tree,form</field>
+        <field name="domain">[('product_id.categ_id.is_cantonera', '=', True), ('incompleta', '=', True)]</field>
+    </record>
+    
+    
+    <record model="ir.ui.view" id="view_task_kanban">
+            <field name="name">sale.order.line.kanban</field>
+            <field name="model">sale.order.line</field>
+            <field name="arch" type="xml">
+                <kanban default_group_by="estado_cantonera" class="o_kanban_small_column o_kanban_project_tasks">
+                
+                    <field name="name"/>
+                    <field name="peso_neto"/>
+                    <field name="estado_cantonera" options="{&quot;group_by_tooltip&quot;: {&quot;requirements&quot;: &quot;Description&quot;, &quot;legend_priority&quot;: &quot;Use of stars&quot;}}"/>
+                                        
+                    <!--<progressbar field="kanban_state" colors='{"done": "success", "blocked": "danger"}'/>-->
+                    <templates>
+                        <t t-name="kanban-box">
+                            <div>
+                                
+                                <div class="oe_kanban_content">
+                                    <div>
+                                        <strong class="o_kanban_record_title"><field name="order_id"/>: <field name="name"/></strong>
+                                    </div>
+                                    
+                                    <div class="text-muted o_kanban_record_subtitle">
+                                        Peso neto: <field name="peso_neto"/>
+                                    </div>
+                                </div>
+                                <div class="oe_clear"/>
+                            </div>
+                        </t>
+                    </templates>
+                </kanban>
+            </field>
+         </record>
+
+	
+	<menuitem name="Producción" parent="sale.sale_menu_root" id="menu_sale_order_line_produccion" sequence="4"/>
+    <menuitem name="Cantoneras" parent="menu_sale_order_line_produccion" id="menu_sale_order_line_produccion_cantonera" action="action_sale_order_line_produccion_cantonera" sequence="1"/>
+	
+    
+    
+    
+    
+    
+    
+    
+    
 </odoo>
